--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -61,12 +61,11 @@
         <ImageView
             android:id="@+id/ivIrBusqueda"
             android:src="@drawable/ic_search"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_gravity="center"
             android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            android:background="@drawable/messenger_button_send_round_shadow" />
+            android:layout_marginRight="12dp" />
 
         <TextView
             android:layout_width="match_parent"
