--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -10,20 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/ivPhoto"
             android:src="@drawable/com_facebook_profile_picture_blank_square"
             android:scaleType="centerCrop"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="58dp"
+            android:layout_height="58dp"
             android:layout_gravity="left"/>
 
         <LinearLayout
             android:id="@+id/contact_info"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_gravity="center"
             android:orientation="vertical"
             android:gravity="center"
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:textSize="17sp"
+                android:textColor="@color/colorPrimaryDark"
                 android:text="Roberto Prestador"/>
 
             <TextView
@@ -44,6 +45,7 @@
                 android:text="Albañil, Pintor"
                 android:singleLine="true"
                 android:textSize="16sp"
+                android:textColor="@color/cement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -55,13 +57,7 @@
                 android:text="[05/05 13:30]"/>
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/ivOpenChat"
-            android:layout_gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/send"
-            android:background="@drawable/messenger_button_send_round_shadow"/>
+
     </LinearLayout>
 
 
