--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,42 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary"
+    tools:context=".ui.LoginActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin"
-        tools:context=".ui.LoginActivity">
+        android:padding="@dimen/activity_vertical_margin">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginTop="8dp"
             android:text="Formulario de ingreso"
+            android:textColor="#FFF"
             android:textSize="21sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="8dp"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Mail:"
+                android:textColor="#FFF"
                 android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:layout_gravity="center"
+                android:background="@drawable/edit_text_style"
+                android:inputType="textEmailAddress"
+                android:minHeight="43dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingStart="8dp" />
 
         </LinearLayout>
 
@@ -50,13 +61,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Contraseña:"
+                android:textColor="#FFF"
                 android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:layout_gravity="center"
+                android:background="@drawable/edit_text_style"
+                android:inputType="textPassword"
+                android:minHeight="43dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingStart="8dp" />
 
         </LinearLayout>
 
@@ -64,34 +83,53 @@
             android:id="@+id/btnRealizarLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Iniciar sesión"
             android:background="@color/orange"
-            android:textColor="#FFF"/>
+            android:text="Iniciar sesión"
+            android:textAllCaps="false"
+            android:textColor="#FFF"
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnOlvidePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="Olvidé mi contraseña" />
+            android:text="Olvidé mi contraseña"
+            android:textAllCaps="false" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ingresar con"
             android:gravity="center"
-            android:textSize="16sp" />
+            android:text="Ingresar con"
+            android:textColor="#FFF"
+            android:textSize="16sp"
+            android:layout_marginBottom="6dp"/>
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/btnIngresarFacebook"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/btnIngresarGoogle"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp" />
+            android:orientation="horizontal">
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/btnIngresarFacebook"
+                android:layout_width="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                facebook:com_facebook_login_text="Facebook"
+                android:layout_marginRight="6dp"
+                android:layout_marginEnd="6dp"
+                android:layout_height="wrap_content" />
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/btnIngresarGoogle"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp" />
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/btnRegistrarme"
@@ -99,6 +137,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Soy usuario nuevo"
+            android:textColor="#FFF"
             android:textSize="18sp" />
 
     </LinearLayout>
