--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -35,6 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="bottom"
+                android:background="@color/primaryDarkTransparent"
                 app:layout_scrollFlags="scroll|enterAlways">
 
                 <LinearLayout
@@ -106,10 +107,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="24dp"
-            android:paddingBottom="12dp"
-            android:paddingRight="12dp"
-            android:paddingLeft="12dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="8dp"
+            android:paddingRight="6dp"
+            android:paddingLeft="6dp"
             android:orientation="vertical">
 
             <include layout="@layout/item_info" android:id="@+id/card_basic" />
