--- a/app/src/main/res/layout/actionbar_category.xml
+++ b/app/src/main/res/layout/actionbar_category.xml
@@ -1,29 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark"
-    android:orientation="horizontal">
-
-    <!-- Contact info -->
-    <com.youtube.sorcjc.proyectoprofesionales.ui.custom.RoundedImageView
-        android:id="@+id/ivPhoto"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/com_facebook_profile_picture_blank_square" />
+    android:background="@color/colorPrimaryDark">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="start|center"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -32,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:text=""
             android:textColor="#fff"
             android:textSize="17sp" />
 
@@ -41,9 +27,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:text=""
             android:textColor="#fff"
-            android:textSize="15sp" />
+            android:textSize="12sp" />
     </LinearLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/ivPhoto"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="end|center_vertical"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:scaleType="centerCrop" />
+
+</FrameLayout>
