--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     tools:context=".ui.LoginActivity">
 
@@ -13,15 +13,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/activity_vertical_margin">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="8dp"
-            android:text="Formulario de ingreso"
-            android:textColor="#FFF"
-            android:textSize="21sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,7 +73,7 @@
         <Button
             android:id="@+id/btnRealizarLogin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="38dp"
             android:background="@color/orange"
             android:text="Iniciar sesión"
             android:textAllCaps="false"
@@ -92,7 +83,7 @@
         <Button
             android:id="@+id/btnOlvidePassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="38dp"
             android:layout_marginBottom="20dp"
             android:text="Olvidé mi contraseña"
             android:textAllCaps="false" />
@@ -100,34 +91,38 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
             android:gravity="center"
             android:text="Ingresar con"
             android:textColor="#FFF"
-            android:textSize="16sp"
-            android:layout_marginBottom="6dp"/>
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:orientation="horizontal">
 
-            <com.facebook.login.widget.LoginButton
+            <Button
                 android:id="@+id/btnIngresarFacebook"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_weight="1"
-                facebook:com_facebook_login_text="Facebook"
-                android:layout_marginRight="6dp"
                 android:layout_marginEnd="6dp"
-                android:layout_height="wrap_content" />
+                android:layout_marginRight="6dp"
+                android:layout_weight="1"
+                android:textAllCaps="false"
+                android:background="#eee"
+                android:text="Facebook" />
 
-            <com.google.android.gms.common.SignInButton
+            <Button
                 android:id="@+id/btnIngresarGoogle"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp" />
-
+                android:background="#eee"
+                android:gravity="center"
+                android:text="Google"
+                android:textAllCaps="false" />
         </LinearLayout>
 
 
@@ -135,6 +130,7 @@
             android:id="@+id/btnRegistrarme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:gravity="center"
             android:text="Soy usuario nuevo"
             android:textColor="#FFF"
