--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
@@ -13,19 +13,10 @@
         android:padding="@dimen/activity_vertical_margin"
         tools:context=".ui.RegisterActivity">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="8dp"
-            android:text="Formulario de registro"
-            android:textColor="#FFF"
-            android:textSize="21sp" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="7dp"
             android:orientation="vertical">
 
             <TextView
@@ -42,8 +33,8 @@
                 android:layout_gravity="center"
                 android:background="@drawable/edit_text_style"
                 android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:minHeight="43dp"
+                android:inputType="textNoSuggestions"
+                android:minHeight="38dp"
                 android:paddingEnd="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
@@ -55,7 +46,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="7dp"
             android:orientation="vertical">
 
             <TextView
@@ -72,7 +63,7 @@
                 android:layout_gravity="center"
                 android:background="@drawable/edit_text_style"
                 android:inputType="textEmailAddress"
-                android:minHeight="43dp"
+                android:minHeight="38dp"
                 android:paddingEnd="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
@@ -83,7 +74,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="7dp"
             android:orientation="vertical">
 
             <TextView
@@ -100,7 +91,7 @@
                 android:layout_gravity="center"
                 android:background="@drawable/edit_text_style"
                 android:inputType="textPassword"
-                android:minHeight="43dp"
+                android:minHeight="38dp"
                 android:paddingEnd="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
@@ -112,7 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="8dp">
+            android:paddingBottom="7dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -133,14 +124,49 @@
         <Button
             android:id="@+id/btnRealizarRegistro"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="38dp"
             android:layout_marginBottom="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="6dp"
             android:background="@color/orange"
             android:text="Registrarme"
             android:textAllCaps="false"
             android:textColor="#FFF"
             android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:gravity="center"
+            android:text="Ingresar con"
+            android:textColor="#FFF"
+            android:textSize="16sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal">
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/btnIngresarFacebook"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginEnd="6dp"
+                android:layout_marginRight="6dp"
+                android:layout_weight="1"
+                facebook:com_facebook_login_text="Facebook" />
+
+            <Button
+                android:id="@+id/btnIngresarGoogle"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#eee"
+                android:gravity="center"
+                android:text="Google"
+                android:textAllCaps="false" />
+        </LinearLayout>
 
 
         <TextView
@@ -150,6 +176,7 @@
             android:gravity="center"
             android:text="Ya soy usuario"
             android:textColor="#FFF"
+            android:layout_marginTop="6dp"
             android:textSize="18sp" />
 
     </LinearLayout>
