--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -21,7 +21,7 @@
             android:layout_height="55dp"
             android:layout_marginRight="16dp"
             android:scaleType="fitXY"
-            android:background="@drawable/messenger_button_send_round_shadow" />
+            android:background="@drawable/bg_circle" />
 
         <TextView
             android:layout_gravity="center"
